--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -143,12 +143,6 @@
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow39" padding="unset unset 1em unset">
-                                                            <wm-gridcolumn columnwidth="4" name="gridcolumn61_1" padding="unset 1em unset unset">
-                                                                <wm-form-field name="propertyType" displayname="Property Type" show="true" primary-key="false" generator="assigned" key="propertyType" type="string" readonly="false" required="true" widget="select"
-                                                                maxchars="255" dataset="bind:Variables.PropertyTypes.dataSet" datafield="dataValue" displayfield="dataValue" defaultvalue="bind:Variables.PropertyTypes.dataSet[0].dataValue" placeholder="Select value"></wm-form-field>
-                                                                <wm-label padding="unset 0.5em" caption="This allows you to designate what type of property this form pertains to and will affect reporting. This allows for creating versions of the same form that assess different fee structures for different property types."
-                                                                class="help-block" fontsize="0.8" fontunit="em" name="label39"></wm-label>
-                                                            </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn60_1" padding="unset 1em unset unset">
                                                                 <wm-label caption="Require GIS Record" name="label2"></wm-label>
                                                                 <wm-select displayname="GIS Record" widget="select" show="true" type="custom" name="gisOptionSelect" datavalue="bind:Variables.CurrentFormObj.dataSet.data[$i].gisrecord &amp;&amp; Variables.CurrentFormObj.dataSet.data[$i].multipleGisrecords ? 'Multiple' : (Variables.CurrentFormObj.dataSet.data[$i].gisrecord ? 'Single' : 'None')"
@@ -156,19 +150,36 @@
                                                                 <wm-label padding="unset 0.5em" name="label27" caption="This requires the user to add a GIS record to the form. You can allow for one or many GIS records." class="help-block"
                                                                 fontsize="0.8" fontunit="em"></wm-label>
                                                             </wm-gridcolumn>
+                                                            <wm-gridcolumn columnwidth="4" name="gridcolumn63_2" padding="unset 1em unset unset">
+                                                                <wm-form-field name="requireOwner" displayname="Require Owner" show="true" primary-key="false" generator="assigned" key="requireOwner" type="boolean" readonly="false" required="false" widget="checkbox"
+                                                                disabled="bind:Widgets.liveformUpdateFormType.formWidgets.gisOptionSelect.displayValue === 'None'" hint="This option requires that the user specify the Owner of the selected GIS record. They can select an Owner already associated with the Parcel, provide new Owner information, or (if Vendor is enabled) select the Vendor as the Owner."
+                                                                placeholder=""></wm-form-field>
+                                                            </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn76_4" padding="unset 1em unset unset">
                                                                 <wm-form-field name="gismap" displayname="Show GIS Map" show="true" primary-key="false" generator="assigned" key="gismap" type="boolean" readonly="false" required="false" widget="checkbox" placeholder=""
                                                                 disabled="bind:Widgets.liveformUpdateFormType.formWidgets.gisOptionSelect.displayValue === 'None'" hint="This enables a map that displays the GIS Records added to the form."></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow39_1" padding="unset unset 1em unset">
-                                                            <wm-gridcolumn columnwidth="4" name="gridcolumn63_2" padding="unset 1em unset unset">
-                                                                <wm-form-field name="requireOwner" displayname="Require Owner" show="true" primary-key="false" generator="assigned" key="requireOwner" type="boolean" readonly="false" required="false" widget="checkbox"
-                                                                disabled="bind:Widgets.liveformUpdateFormType.formWidgets.gisOptionSelect.displayValue === 'None'" hint="This option requires that the user specify the Owner of the selected GIS record. They can select an Owner already associated with the Parcel, provide new Owner information, or (if Vendor is enabled) select the Vendor as the Owner."
-                                                                placeholder=""></wm-form-field>
+                                                            <wm-gridcolumn columnwidth="4" name="gridcolumn107">
+                                                                <wm-form-field displayname="Form Expires By" widget="select" show="true" type="custom" name="expirationType" placeholder="Never" dataset="bind:Variables.stvExpirationTypes.dataSet" datafield="value"
+                                                                displayfield="label"></wm-form-field>
                                                             </wm-gridcolumn>
+                                                            <wm-gridcolumn columnwidth="4" name="gridcolumn108_1">
+                                                                <wm-form-field displayname="Days Until Expiration" widget="text" show="bind:!!Widgets.liveformUpdateFormType.formWidgets.expirationType.datavalue &amp;&amp; Widgets.liveformUpdateFormType.formWidgets.expirationType.datavalue !== 'FormStatusId'"
+                                                                type="custom" name="expirationDays" inputtype="number" placeholder="Enter days until expiration" required="bind:!!Widgets.liveformUpdateFormType.formWidgets.expirationType.datavalue &amp;&amp; Widgets.liveformUpdateFormType.formWidgets.expirationType.datavalue !== 'FormStatusId'"></wm-form-field>
+                                                                <wm-form-field displayname="Status" widget="select" show="bind:Widgets.liveformUpdateFormType.formWidgets.expirationType.datavalue === 'FormStatusId'" type="custom" name="expirationStatusId"
+                                                                dataset="bind:Variables.StatusesData.dataSet" datafield="id" displayfield="status" required="bind:Widgets.liveformUpdateFormType.formWidgets.expirationType.datavalue === 'FormStatusId'"></wm-form-field>
+                                                            </wm-gridcolumn>
+                                                            <wm-gridcolumn columnwidth="4" name="gridcolumn109_2"></wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow38_1" padding="unset unset 1em unset">
+                                                            <wm-gridcolumn columnwidth="4" name="gridcolumn61_1" padding="unset 1em unset unset">
+                                                                <wm-form-field name="propertyType" displayname="Property Type" show="true" primary-key="false" generator="assigned" key="propertyType" type="string" readonly="false" required="true" widget="select"
+                                                                maxchars="255" dataset="bind:Variables.PropertyTypes.dataSet" datafield="dataValue" displayfield="dataValue" defaultvalue="bind:Variables.PropertyTypes.dataSet[0].dataValue" placeholder="Select value"></wm-form-field>
+                                                                <wm-label padding="unset 0.5em" caption="This allows you to designate what type of property this form pertains to and will affect reporting. This allows for creating versions of the same form that assess different fee structures for different property types."
+                                                                class="help-block" fontsize="0.8" fontunit="em" name="label39"></wm-label>
+                                                            </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn56" padding="unset 1em unset unset">
                                                                 <wm-label caption="Require Contractor" name="label13_1"></wm-label>
                                                                 <wm-select show="true" datavalue="bind:Variables.CurrentFormObj.dataSet.data[$i].vendorSelection &amp;&amp; Variables.CurrentFormObj.dataSet.data[$i].multipleVendors ? 'Multiple' : (Variables.CurrentFormObj.dataSet.data[$i].vendorSelection ? 'Single' : 'None')"
