--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -303,16 +303,16 @@
                                 <wm-layoutgrid name="layoutgrid6">
                                     <wm-gridrow name="gridrow55">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn80">
-                                            <wm-label padding="unset 0.5em" name="label15" caption="You can assign this Form Design to one or many Form Categories. This will affect where the Form appears to CivicXpress users, makes the Form searchable by Category, and is used to generate Municipality Analytics."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label15" caption="You can add this form to one or many form categories. This will affect where the form appears to CivicXpress users, makes the form searchable by category, and is used to generate municipality statistics and reporting."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow26">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn53">
                                             <wm-livegrid formlayout="dialog" name="livegrid2">
                                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.FormCategories.dataSet" navigation="Classic" name="grid2" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
-                                                    <wm-grid-column binding="formCategories.category" caption="Category" type="string" generator="assigned" readonly="true" show="true" related-entity-name="FormCategories"></wm-grid-column>
-                                                    <wm-grid-column binding="formCategories.description" caption="Description" type="string" generator="assigned" readonly="true" show="true" related-entity-name="FormCategories"></wm-grid-column>
-                                                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                                    <wm-grid-column binding="formCategories.category" caption="Form Category" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="FormCategories"></wm-grid-column>
+                                                    <wm-grid-column binding="formCategories.description" caption="Description" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="FormCategories"></wm-grid-column>
+                                                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                     <wm-grid-action key="addNewRow" display-name="Add Category" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Category" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                                 </wm-grid>
@@ -321,7 +321,7 @@
                                                     <wm-layoutgrid columns="1" name="layoutgrid9">
                                                         <wm-gridrow name="gridrow37">
                                                             <wm-gridcolumn columnwidth="12" name="gridcolumn62">
-                                                                <wm-form-field name="formCategories" displayname="What category would you like to assign to this form?" show="true" primary-key="false" generator="assigned" key="formCategories" type="list" is-related="true"
+                                                                <wm-form-field name="formCategories" displayname="What form category does this form belong in?" show="true" primary-key="false" generator="assigned" key="formCategories" type="list" is-related="true"
                                                                 readonly="false" required="true" widget="select" dataset="bind:Variables.Categories.dataSet" datafield="All Fields" displayfield="category" orderby="category:asc" placeholder="Select Category"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
@@ -559,7 +559,7 @@
                                                 <wm-layoutgrid name="layoutgrid19">
                                                     <wm-gridrow name="gridrow74">
                                                         <wm-gridcolumn columnwidth="12" name="gridcolumn109">
-                                                            <wm-label padding="unset 0.5em" name="labelInspCat" caption="In order to allow inspections to be requested for this form, you must first assign inspection categories. Inspection categories determine which exact inspection designs can be requested for this form."></wm-label>
+                                                            <wm-label padding="unset 0.5em" name="labelInspCat" caption="In order to allow inspections to be requested for this form, you must first assign inspection categories. Inspection categories determine which inspections can be requested for this form."></wm-label>
                                                         </wm-gridcolumn>
                                                     </wm-gridrow>
                                                     <wm-gridrow name="gridrow75">
@@ -567,9 +567,9 @@
                                                             <wm-livegrid formlayout="dialog" name="livegridFormtoinspectioncategory">
                                                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.FormToInspectionCategoryMappingData.dataSet" navigation="Classic" name="gridFormtoinspectioncategorymapp"
                                                                 filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
-                                                                    <wm-grid-column binding="inspectionCategories.inspectionCategory" caption="Inspection Category" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="InspectionCategories"></wm-grid-column>
-                                                                    <wm-grid-column binding="addedAt" caption="Date Added" type="datetime" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp"
-                                                                    show="true" filterwidget="date" readonly="false"></wm-grid-column>
+                                                                    <wm-grid-column binding="inspectionCategories.inspectionCategory" caption="Category" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="InspectionCategories"></wm-grid-column>
+                                                                    <wm-grid-column binding="inspectionCategories.inspectionCategoryDescription" caption="Description" type="string" primary-key="false" generator="assigned" readonly="true"
+                                                                    edit-widget-type="text" show="true" related-entity-name="InspectionCategories"></wm-grid-column>
                                                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                                     <wm-grid-action key="addNewRow" display-name="Add Category" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Category" action="addNewRow()" shortcutkey=""
                                                                     disabled="false"></wm-grid-action>
@@ -580,7 +580,7 @@
                                                                     <wm-layoutgrid columns="1" name="layoutgrid18">
                                                                         <wm-gridrow name="gridrow71">
                                                                             <wm-gridcolumn columnwidth="12" name="gridcolumn102">
-                                                                                <wm-form-field name="inspectionCategories" displayname="What inspection category would you like to assign to this form?" show="true" primary-key="false" generator="assigned" key="inspectionCategories"
+                                                                                <wm-form-field name="inspectionCategories" displayname="What inspection category does this form belong in?" show="true" primary-key="false" generator="assigned" key="inspectionCategories"
                                                                                 type="list" is-related="true" readonly="false" required="true" widget="select" placeholder="Select Category" dataset="bind:Variables.CurrentMunicipalityInspectionCategories.dataSet"
                                                                                 datafield="All Fields" displayfield="inspectionCategory" orderby="inspectionCategory:asc"></wm-form-field>
                                                                             </wm-gridcolumn>
@@ -609,8 +609,8 @@
                                                 <wm-layoutgrid name="layoutgrid17">
                                                     <wm-gridrow name="gridrow73" padding="unset unset 1em unset">
                                                         <wm-gridcolumn columnwidth="12" name="gridcolumn105">
-                                                            <wm-label padding="unset 0.5em" name="labelInspSeq1" caption="Once inspection categories have been assigned, all inspections from those categories will be available for request (when the form is in a form status that is set to &quot;Allow Inspection Scheduling&quot;)."></wm-label>
-                                                            <wm-label padding="unset 0.5em" name="labelInspSeq2" caption="If a specific inspection sequence has to take place, please select &quot;Force Inspection Sequence&quot; and sort the inspections below."></wm-label>
+                                                            <wm-label padding="unset 0.5em" name="labelInspSeq1" caption="Once inspection categories have been assigned, all inspections in those categories will be available for request when the form is in a form status that is set to &quot;Allow Inspection Requests&quot;."></wm-label>
+                                                            <wm-label padding="unset 0.5em" name="labelInspSeq2" caption="If a specific inspection sequence must take place, please select &quot;Force Inspection Sequence&quot; and sort the inspections below."></wm-label>
                                                         </wm-gridcolumn>
                                                     </wm-gridrow>
                                                     <wm-gridrow name="gridrow66" padding="unset unset 1em unset">
@@ -629,10 +629,12 @@
                                                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.InspectionSequenceData.dataSet" navigation="Classic" name="gridInspectionSequence" filtermode="multicolumn"
                                                                 exportformat="EXCEL" showrecordcount="true">
                                                                     <wm-grid-column binding="sequenceOrderNumber" caption="Sequence Order" type="integer" generator="assigned" edit-widget-type="number" show="true" readonly="false"></wm-grid-column>
-                                                                    <wm-grid-column binding="inspectionDesign.inspectDesignName" caption="Inspection Design" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true"
+                                                                    <wm-grid-column binding="inspectionDesign.inspectDesignName" caption="Inspection" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true"
                                                                     related-entity-name="InspectionDesign"></wm-grid-column>
-                                                                    <wm-grid-column binding="mustCompBeforeReqNxt" caption="Must Complete Before Requesting Next" type="boolean" primary-key="false" generator="assigned" edit-widget-type="checkbox"
-                                                                    show="true" readonly="false"></wm-grid-column>
+                                                                    <wm-grid-column binding="mustCompBeforeReqNxt" caption="Must Pass Before Requesting Next" type="boolean" widget-type="checkbox" primary-key="false" generator="assigned"
+                                                                    edit-widget-type="checkbox" show="true" readonly="false">
+                                                                        <wm-checkbox scopedatavalue="row['mustCompBeforeReqNxt']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
+                                                                    </wm-grid-column>
                                                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                                     <wm-grid-action key="addNewRow" display-name="Add Inspection" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Inspection" action="addNewRow()" shortcutkey=""
                                                                     disabled="false"></wm-grid-action>
@@ -644,9 +646,9 @@
                                                                     <wm-layoutgrid columns="1" name="layoutgrid18_1">
                                                                         <wm-gridrow name="gridrow68">
                                                                             <wm-gridcolumn columnwidth="12" name="gridcolumn100">
-                                                                                <wm-form-field name="inspectionDesign" displayname="Inspection Design" show="true" primary-key="false" generator="assigned" key="inspectionDesign" type="list" is-related="true"
-                                                                                readonly="false" required="true" widget="select" dataset="bind:Variables.InspectionDesignByDesignCategoriesRelatedToForm.dataSet" datafield="All Fields" displayfield="inspectDesignName"
-                                                                                defaultvalue="bind:Variables.InspectionDesignByDesignCategoriesRelatedToForm.firstRecord" placeholder="Select Inspection"></wm-form-field>
+                                                                                <wm-form-field name="inspectionDesign" displayname="Inspection" show="true" primary-key="false" generator="assigned" key="inspectionDesign" type="list" is-related="true" readonly="false"
+                                                                                required="true" widget="select" dataset="bind:Variables.InspectionDesignByDesignCategoriesRelatedToForm.dataSet" datafield="All Fields" displayfield="inspectDesignName" defaultvalue="bind:Variables.InspectionDesignByDesignCategoriesRelatedToForm.firstRecord"
+                                                                                placeholder="Select Inspection"></wm-form-field>
                                                                             </wm-gridcolumn>
                                                                         </wm-gridrow>
                                                                         <wm-gridrow name="gridrow70">
@@ -658,8 +660,8 @@
                                                                         </wm-gridrow>
                                                                         <wm-gridrow name="gridrow69">
                                                                             <wm-gridcolumn columnwidth="12" name="gridcolumn101">
-                                                                                <wm-form-field name="mustCompBeforeReqNxt" displayname="Must Complete Before Requesting Next" show="true" primary-key="false" generator="assigned" key="mustCompBeforeReqNxt" type="boolean"
-                                                                                readonly="false" required="false" widget="checkbox" defaultvalue="false" placeholder="" hint="If enabled, this inspection must be marked as completed before the next inspection in the sequence can be requested."></wm-form-field>
+                                                                                <wm-form-field name="mustCompBeforeReqNxt" displayname="Must Pass Before Requesting Next" show="true" primary-key="false" generator="assigned" key="mustCompBeforeReqNxt" type="boolean"
+                                                                                readonly="false" required="false" widget="checkbox" defaultvalue="true" placeholder="" hint="If selected, this inspection must &quot;Pass&quot; before the next inspection in the sequence can be requested."></wm-form-field>
                                                                             </wm-gridcolumn>
                                                                         </wm-gridrow>
                                                                     </wm-layoutgrid>
